fix(checkbox): correct background color for inderterminate in high contrast mode (#1457)
* fix(checkbox): restyle indeterminate background color

* fix(checkbox): restyle for indeterminate

--- a/projects/ng-aquila/src/checkbox/checkbox.component.scss
+++ b/projects/ng-aquila/src/checkbox/checkbox.component.scss
@@ -316,6 +316,16 @@
                 forced-color-adjust: none;
             }
         }
+        &:not(:has(input:disabled)):has(.nx-checkbox__indeterminate-indicator) {
+            .nx-checkbox__control {
+                background-color: highlight !important;
+                border-color: highlight !important;
+            }
+            .nx-checkbox__indeterminate-indicator {
+                color: window !important;
+                border-color: window !important;
+            }
+        }
 
         .nx-checkbox__indeterminate-indicator {
             color: buttonText !important;
